# projetAlgo2

./: CMakeLists.txt  main.cpp
exemples/: exemple100.txt  exemple1000.txt  exemple500.txt  worstMeilleurQueBest.txt
source/: Bin.cpp  Bin.h  Parser.cpp  Parser.h  main.cpp  main2.cpp
source/algorithmes/: Algorithme.cpp  Algorithme.h  AlmostWorstFirst.cpp  AlmostWorstFirst.h  BestFit.cpp  BestFit.h  FirstFit.cpp  FirstFit.h  NextFit.cpp  NextFit.h  WorstFit.cpp  WorstFit.h
source/utils/: BinaryNode.cpp  BinaryNode.h  BinaryTree.cpp  BinaryTree.h
